# serializer version: 1
# name: test_number_states[platforms0][number.gotham_city_degree_minutes-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 3000.0,
      'min': -3000.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_degree_minutes',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Degree minutes',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'degree_minutes',
    'unique_id': 'robin-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-40940',
    'unit_of_measurement': 'DM',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_degree_minutes-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City Degree minutes',
      'max': 3000.0,
      'min': -3000.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
      'unit_of_measurement': 'DM',
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_degree_minutes',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-875.0',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_degree_minutes_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 3000.0,
      'min': -3000.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_degree_minutes_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Degree minutes',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'degree_minutes',
    'unique_id': 'batman-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-40940',
    'unit_of_measurement': 'DM',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_degree_minutes_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City Degree minutes',
      'max': 3000.0,
      'min': -3000.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.1,
      'unit_of_measurement': 'DM',
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_degree_minutes_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-875.0',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_heating_offset_climate_system_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 10.0,
      'min': -10.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_heating_offset_climate_system_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating offset climate system 1',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'robin-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-47011',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_heating_offset_climate_system_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City Heating offset climate system 1',
      'max': 10.0,
      'min': -10.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_heating_offset_climate_system_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_heating_offset_climate_system_1_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 10.0,
      'min': -10.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_heating_offset_climate_system_1_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heating offset climate system 1',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'batman-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-47011',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_heating_offset_climate_system_1_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City Heating offset climate system 1',
      'max': 10.0,
      'min': -10.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1.0,
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_heating_offset_climate_system_1_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.0',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_room_sensor_set_point_value_heating_climate_system_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 35.0,
      'min': 5.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_room_sensor_set_point_value_heating_climate_system_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room sensor set point value heating climate system 1',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'robin-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-47398',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_room_sensor_set_point_value_heating_climate_system_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City Room sensor set point value heating climate system 1',
      'max': 35.0,
      'min': 5.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_room_sensor_set_point_value_heating_climate_system_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '14.5',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_room_sensor_set_point_value_heating_climate_system_1_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 35.0,
      'min': 5.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_room_sensor_set_point_value_heating_climate_system_1_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room sensor set point value heating climate system 1',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'batman-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-47398',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_room_sensor_set_point_value_heating_climate_system_1_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City Room sensor set point value heating climate system 1',
      'max': 35.0,
      'min': 5.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_room_sensor_set_point_value_heating_climate_system_1_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '14.5',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_start_diff_additional_heat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 2000.0,
      'min': 100.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 10.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_start_diff_additional_heat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'start diff additional heat',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'degree_minutes',
    'unique_id': 'robin-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-148072',
    'unit_of_measurement': 'DM',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_start_diff_additional_heat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City start diff additional heat',
      'max': 2000.0,
      'min': 100.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 10.0,
      'unit_of_measurement': 'DM',
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_start_diff_additional_heat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '700.0',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_start_diff_additional_heat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 2000.0,
      'min': 100.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 10.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.gotham_city_start_diff_additional_heat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'start diff additional heat',
    'platform': 'myuplink',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'degree_minutes',
    'unique_id': 'batman-r-1234-20240201-123456-aa-bb-cc-dd-ee-ff-148072',
    'unit_of_measurement': 'DM',
  })
# ---
# name: test_number_states[platforms0][number.gotham_city_start_diff_additional_heat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Gotham City start diff additional heat',
      'max': 2000.0,
      'min': 100.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 10.0,
      'unit_of_measurement': 'DM',
    }),
    'context': <ANY>,
    'entity_id': 'number.gotham_city_start_diff_additional_heat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '700.0',
  })
# ---
